# vshadow-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: catalog.rs  error.rs  header.rs  lib.rs  reader.rs  store.rs
