[package]
name = "vshadow"
version = "0.1.1"
edition = "2021"
description = "Pure Rust parser for Windows Volume Shadow Copy (VSS) snapshots. Read-only access to VSS stores from forensic disk images without Windows APIs."
authors = ["Tono Diaz <c00pr@pm.me> (@jupyterj0nes)"]
repository = "https://github.com/jupyterj0nes/vshadow-rs"
license = "MIT OR Apache-2.0"
keywords = ["forensics", "vss", "shadow-copy", "dfir", "ntfs"]
categories = ["filesystem", "parser-implementations"]
readme = "README.md"

[[bin]]
name = "vshadow-info"
path = "src/bin/vshadow_info.rs"

[dependencies]
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
ewf = "0.2"
ntfs = "0.4"
