[package]
name = "vshadow"
version = "0.1.2"
edition = "2021"
description = "Pure Rust parser for Windows Volume Shadow Copy (VSS) snapshots. Read-only access to VSS stores from forensic disk images without Windows APIs."
authors = ["Tono Diaz (@jupyterj0nes)"]
repository = "https://github.com/jupyterj0nes/vshadow-rs"
license = "AGPL-3.0-only"
keywords = ["forensics", "vss", "shadow-copy", "dfir", "ntfs"]
categories = ["filesystem", "parser-implementations"]
readme = "README.md"

[[bin]]
name = "vshadow-info"
path = "src/bin/vshadow_info.rs"

[dependencies]
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
ewf = "0.2"
ntfs = "0.4"
